@@ -21,6 +21,7 @@ Depends: adduser,
  python-nova,
  python-novnc,
  python-numpy,
+ libjs-swfobject,
  websockify,
  ${misc:Depends},
  ${shlibs:Depends},
