@@ -15,3 +15,8 @@ override_dh_clean:
 
 override_dh_auto_build-arch:
 	make -C utils rebind.so
+
+override_dh_fixperms:
+	dh_fixperms
+	rm -f $(CURDIR)/debian/novnc/usr/share/novnc/include/web-socket-js/swfobject.js
+	ln -s ../../../javascript/swfobject/swfobject.js $(CURDIR)/debian/novnc/usr/share/novnc/include/web-socket-js/swfobject.js
